<resources>
    <string name="app_name">Weather</string>
    <string name="mDescription">Description</string>
    <string name="mTemp">Temperature</string>
    <string name="Date">mDate</string>
    <string name="City">mCity</string>
    <string name="o">o</string>
    <string name="search">Search</string>
    <string name="mTime">mTime</string>
    <string name="mTempfeel">mTempfeel</string>
    <string name="mWindspeed">mWindspeed</string>
    <string name="mTempmax">mTempmax</string>
</resources>